# ucct

./: .gitignore  README.md  colab.ipynb  e1.ipynb  e2.ipynb  examples.json  experiment.ipynb  explore.ipynb  main.py  pyproject.toml  task_suite.json  task_suite_test.json
output/meta-llama_Meta-Llama-3.1-8B-Instruct/: d_r.h5  rho.h5  rho_d.h5
output/unsloth_Phi-4/: d_r.h5  rho_d.h5
