[project]
name = "ucct"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "adjusttext>=1.3.0",
    "argparse>=1.4.0",
    "bitsandbytes>=0.46.1",
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "peft>=0.16.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "timm>=1.0.17",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "unsloth-zoo",
    "unsloth[colab-new]",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
unsloth = { git = "https://github.com/unslothai/unsloth.git" }
unsloth-zoo = { git = "https://github.com/unslothai/unsloth-zoo.git" }
transformers = { git = "https://github.com/huggingface/transformers.git" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
